# Population-Convergence

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/simpop/: cli.py
